Fix popup visibility

--- a/src/sass/modules/_popup.scss
+++ b/src/sass/modules/_popup.scss
@@ -14,8 +14,8 @@
 
     // visual
     background-color: rgba(0, 0, 0, 0.5);
-    // opacity: 0;
-    // visibility: hidden;
+    opacity: 0;
+    visibility: hidden;
     transition: all 0.3s ease-out;
 
     &--show {
